[gd_scene load_steps=7 format=3 uid="uid://m63vthakh13d"]

[ext_resource type="PackedScene" uid="uid://ci7omqwvvokar" path="res://gunbot.tscn" id="1_8oxju"]
[ext_resource type="Script" path="res://world.gd" id="1_u5o0q"]
[ext_resource type="PackedScene" uid="uid://bx5jfa0rj3eeu" path="res://organic.tscn" id="2_oemh6"]
[ext_resource type="PackedScene" uid="uid://cwyk7hfwyi5cy" path="res://background_music.tscn" id="4_8l7o7"]
[ext_resource type="Texture2D" uid="uid://spv7cfunw8px" path="res://assets/graphics/nebulaset.png" id="5_p7gei"]

[sub_resource type="Curve2D" id="Curve2D_51yh6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0)
}
point_count = 7

[node name="world" type="Node"]
script = ExtResource("1_u5o0q")
organic_scene = ExtResource("2_oemh6")

[node name="gunbot" parent="." instance=ExtResource("1_8oxju")]
position = Vector2(241, 351)
scale = Vector2(2, 2)

[node name="OrganicTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Position" type="Marker2D" parent="."]
position = Vector2(240, 360)

[node name="OrganicPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_51yh6")

[node name="SpawnLocation" type="PathFollow2D" parent="OrganicPath"]
position = Vector2(-1.08624, 0)

[node name="BackgroundMusic" parent="." instance=ExtResource("4_8l7o7")]

[node name="Background" type="Sprite2D" parent="."]
z_index = -10
texture = ExtResource("5_p7gei")

[node name="bullets_shot" type="Node2D" parent="."]

[connection signal="hit" from="gunbot" to="." method="game_over"]
[connection signal="timeout" from="OrganicTimer" to="." method="_on_organic_timer_timeout"]
